tests/ui/traits/next-solver/builtin-fn-must-return-sized.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/builtin-fn-must-return-sized.rs:15:11
   |
LL |     foo::<fn() -> str, _>(None, ());
   |           ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `fn() -> str`, the trait `Sized` is not implemented for `str`
   = note: required because it appears within the type `fn() -> str`
note: required by a bound in `foo`
  --> $DIR/builtin-fn-must-return-sized.rs:10:11
   |
LL | fn foo<F: Fn<T>, T: Tuple>(f: Option<F>, t: T) {
   |           ^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
